# faceana-mtq

./: .augmentignore  .env  .env.example  .gitignore  Arc.md  LICENSE  PROJECT_STATUS.md  README-CN.md  README.md  README_GUI.md  TODO.md  arc.md  check_installation.py  index.html  install_dependencies.py  main.js  package-lock.json  package.json  renderer.js  requirements.txt  requirements_minimal.txt  run_gui.py  test_imports.py  verify_completion.py
.cursor/rules/: pythonrules.mdc
.obsidian/: community-plugins.json  core-plugins.json  graph.json  workspace.json
SUM/: SUM1.md
_EXP/: EXP1.md  EXP3.md  EXP4.md
_SUM/: SUM3.md
_expriments/exp/: EXP10.md  EXP11.md  EXP12.md  EXP13.md  EXP14.md  EXP15.md  (+7 more)
app/: main.js  page.tsx  style.css
docs/: agent.md  api-documents.md  arc.md  idea.md  init.md  logic.md  project_architecture_diagram.md  project_overview_simple.md
examples/: comfyui_gen.md
obsidian/: 程序执行流程.canvas
plan/: plan1.md
release/: EmoScan-v1.1.0-Standalone-Plan.md  FINAL-RELEASE-CHECKLIST.md  README.md  RELEASE-SUMMARY.md  SECURITY-FIX-REPORT.md
release/EmoScan-v1.0.0-Developer/backend-service/: .env.example  pyproject.toml  requirements.txt  start.bat  start.sh  start_server.py
release/EmoScan-v1.0.0-Developer/backend-service/app/api/: __init__.py
release/EmoScan-v1.0.0-Developer/backend-service/app/models/: comfyui.py  emotion.py
release/EmoScan-v1.0.0-Developer/backend-service/app/services/: comfyui_service.py  facepp_service.py
src/: config.py  main.py
test/: facepp_api_call.py  gemini_api_call.py  openrouter_api_call.py
(+1198 files in other folders)
